<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="gt.edu.kinal.jmonterroso.learngeek_grupo3.LoginActivity" android:background="@color/background">

    <TextView
        android:id="@+id/textLog"
        android:layout_centerHorizontal="true"
        android:text="@string/loggin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/title"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="150dp"
        android:textSize="25sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/user"
        android:layout_centerHorizontal="true"
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LayoutToolBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/title"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/userText"
        android:layout_below="@+id/user"
        android:layout_width="300dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_user"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:textColor="@color/title"
        android:inputType="text" />

    <TextView
        android:id="@+id/pass"
        android:layout_centerHorizontal="true"
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/title"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/passText"
        android:layout_below="@+id/pass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/title"
        android:password="true"
        android:inputType="text|textVisiblePassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loggin"
        android:id="@+id/logins"
        android:background="@color/title"
        android:textSize="15sp"
        android:textColor="@color/background"
        android:layout_below="@+id/passText"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_suc"
        android:layout_marginTop="51dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/logins"
        android:id="@+id/registers"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textSize="15sp"
        android:textColor="@color/title"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:drawableLeft="@drawable/add_user"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rem"
        android:id="@+id/remember"
        android:layout_below="@+id/passText"
        android:layout_toRightOf="@+id/pass"
        android:layout_toEndOf="@+id/pass"
        android:checked="false"
        android:textColor="@color/title" />


</RelativeLayout>
