<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background"
    tools:context="gt.edu.kinal.jmonterroso.learngeek_grupo3.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textRegister"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/title"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="150dp"
                android:textSize="25sp"
                android:layout_alignParentRight="false"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/user"
                android:layout_centerHorizontal="true"
                android:text="@string/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textRegister"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/title"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_alignParentRight="false"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/userText"
                android:layout_below="@+id/user"
                android:layout_width="300dp"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_user"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:textColor="@color/title"/>

            <TextView
                android:id="@+id/pass"
                android:layout_centerHorizontal="true"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/title"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_alignParentRight="false"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/passText"
                android:layout_below="@+id/pass"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:password="true" />

            <TextView
                android:id="@+id/pass2"
                android:layout_centerHorizontal="true"
                android:text="@string/password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/title"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_alignParentRight="false"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/passText2"
                android:layout_below="@+id/pass2"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:password="true"/>

            <TextView
                android:id="@+id/email"
                android:layout_centerHorizontal="true"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passText2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/title"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_alignParentRight="false"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/emailText"
                android:layout_below="@+id/email"
                android:layout_width="300dp"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_email"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:textColor="@color/title"/>

            <TextView
                android:id="@+id/names"
                android:layout_centerHorizontal="true"
                android:text="@string/nameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/title"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_alignParentRight="false"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/nameText"
                android:layout_below="@+id/names"
                android:layout_width="300dp"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_name"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:textColor="@color/title"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createReg"
                android:id="@+id/regit"
                android:background="@color/title"
                android:layout_marginLeft="200dp"
                android:textSize="15sp"
                android:layout_below="@id/nameText"

                android:drawableLeft="@drawable/add_user"
                android:textColor="@color/background"
                android:layout_alignParentBottom="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loggin"
                android:id="@+id/logins"
                android:drawableLeft="@drawable/ic_suc"
                android:background="@android:color/transparent"
                android:textSize="15sp"
                android:layout_marginLeft="50dp"
                android:layout_below="@id/nameText"
                android:textColor="@color/title"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
